# tank-coding-battle

./: .gitignore  Cargo.toml  README.md  build.gradle  gradle.properties  pom.xml
.cargo/: config.toml
.github/workflows/: cargo-version-check.yml  linode.yml  release.yml
assets/: config.ron
assets/config/: config.client.ron  config.server.ron  config.tanks.ron  server_config.ron  spectator_client_config.ron
assets/maps/: environment.glb  real_map.map.ron  test_map.map.ron
assets/models/tanks/: light_tank.blend
assets/models/tanks/blend/: heavy_tank.blend  light_tank.blend
assets/models/tanks/exported/: heavy_tank.glb  light_tank.glb
core/: build.gradle
core/src/main/java/dev/zwazel/: Main.java
game_sim/: Cargo.toml
lwjgl3/: build.gradle
lwjgl3/src/main/java/dev/zwazel/lwjgl3/: Lwjgl3Launcher.java  StartupHelper.java
proc_macros/: Cargo.toml
proc_macros/src/: auto_trigger_message_received.rs  generate_message_data_triggers.rs  lib.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/asset_handling/: config.rs
server/src/debug/: mod.rs  visualize_colliders.rs
server/src/gameplay/: game_state_handling.rs  gameplay_state.rs  lib.rs  lobby_cleanup.rs  mod.rs  process_messages.rs  process_messages_when_lobby_not_ready.rs  simulation.rs  start_lobby.rs  system_sets.rs  tick_systems.rs  triggers.rs
server/src/gameplay/capture_the_flag/: collision_handler.rs  follow_carrier.rs  handle_flag_dropped.rs  handle_flag_picked_up.rs  handle_scoring.rs  mod.rs  reset_flags.rs  triggers.rs
server/src/gameplay/handle_collisions/: handle_collisions.rs  mod.rs
server/src/gameplay/handle_players/: dummy_handling.rs  handle_death.rs  handle_health.rs  handle_projectiles.rs  handle_shooting.rs  handle_spawning.rs  insert_turret.rs  mod.rs  team_handling.rs  update_client_states.rs
server/src/gameplay/handle_players/movement_handling/: handle_tank_movement.rs  handle_tank_rotation.rs  handle_turret_rotation.rs  mod.rs
server/src/gameplay/setup_map/: mod.rs  setup_flags.rs
server/src/networking/: lib.rs  mod.rs  system_sets.rs
server/src/networking/handle_clients/: handle_connect.rs  handle_disconnect.rs  lib.rs  mod.rs
server/src/networking/handle_messages/: handle_sending.rs  message_queue.rs  mod.rs  receiving_messages.rs  sending_messages.rs
server/src/networking/lobby_management/: handle_first_contact.rs  lobby_management.rs  mod.rs
server/src/networking/shared/: lib.rs  mod.rs
server/src/networking/shared/shared_data/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/asset_handling/: config.rs  maps.rs  mod.rs
shared/src/game/: common_components.rs  common_systems.rs  flag.rs  game_state.rs  mod.rs  player_handling.rs  projectile_handling.rs  tank_types.rs
shared/src/game/collision_handling/: components.rs  mod.rs  structs.rs  triggers.rs
shared/src/networking/: mod.rs  networking_state.rs  networking_system_sets.rs
shared/src/networking/client_handling/: mod.rs  networked_client.rs
shared/src/networking/lobby_management/: despawn_on_lobby_removal.rs  lobby_management.rs  mod.rs
shared/src/networking/messages/: handle_serialization.rs  message_container.rs  message_queue.rs  message_targets.rs  message_types.rs  mod.rs
shared/src/networking/messages/message_data/: entity_data.rs  first_contact.rs  flag_event_data.rs  game_starts.rs  game_state.rs  message_error_types.rs  mod.rs  server_config.rs  simple_text_message.rs  start_game_config.rs  team_scored.rs  text_data.rs
shared/src/networking/messages/message_data/tank_messages/: hit_message_data.rs  mod.rs  move_tank.rs  rotate_tank_body.rs  rotate_tank_turret.rs  shoot.rs
spectator_client/: Cargo.toml
spectator_client/src/: game_state.rs  lib.rs
spectator_client/src/game_handling/: despawn_delayed.rs  entity_mapping.rs  flag_handling.rs  game_starts.rs  game_state_update.rs  mod.rs  player_handling.rs  projectile_handling.rs  smooth_transform_handling.rs
spectator_client/src/map_visualization/: create_map.rs  mod.rs  visualize_colliders.rs  visualize_markers.rs  visualize_players.rs  visualize_positions.rs  visulize_turret_ranges.rs
spectator_client/src/networking/: connect.rs  first_contact.rs  mod.rs
spectator_client/src/networking/message_handling/: mod.rs  reading_messages.rs  sending_messages.rs
spectator_client/src/test_render_map/: mod.rs
spectator_client/src/ui/: interaction_system.rs  mod.rs  run_conditions.rs  start_game.rs
src/: config.rs  main.rs  main_state.rs
src/gameplay/: gameplay_state.rs  lib.rs  mod.rs  system_sets.rs  tick_systems.rs
src/gameplay/handle_players/: mod.rs
src/main/java/dev/zwazel/: Main.java
src/netowrking/: lib.rs  mod.rs
src/networking/: lib.rs  mod.rs  run_conditions.rs  system_sets.rs
src/networking/handle_clients/: handle_connect.rs  handle_disconnect.rs  lib.rs  mod.rs
src/networking/handle_messages/: handle_sending.rs  lib.rs  mod.rs
src/networking/lobby_management/: lib.rs  mod.rs
src/networking/shared/: lib.rs  mod.rs
