[workspace]
resolver = "2"
members = ["game_sim"]

[package]
name = "tank-coding-battle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_state",
    "bevy_asset",
    "bevy_color",
    "serialize",
    "multi_threaded",
] }
bevy_asset_loader = { version = "0.22.0", features = [
    "standard_dynamic_assets",
] }
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
crossbeam-channel = "0.5.14"
serde = "1"
serde_json = "1.0.138"

[features]
default = ["bevy_debug"]
bevy_debug = ["bevy/bevy_dev_tools"]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable a lot of optimization in release mode
[profile.release]
codegen-units = 1
lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
