[workspace]
resolver = "2"
members = ["game_sim", "server", "shared", "spectator_client"]

[package]
name = "tank-coding-battle"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }
bevy_asset_loader = { version = "0.22.0", features = [
    "standard_dynamic_assets",
] }
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
serde = "1"
serde_json = "1.0.138"

[dependencies]
bevy = { workspace = true }

server = { path = "server" }
spectator_client = { path = "spectator_client" }
shared = { path = "shared" }

[features]
default = ["bevy_debug"]
bevy_debug = ["bevy/bevy_dev_tools"]

server = ["server/server"]
spectator_client = ["spectator_client/spectator_client"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable a lot of optimization in release mode
[profile.release]
codegen-units = 1
lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
