[workspace]
resolver = "2"
members = ["proc_macros", "server", "shared", "spectator_client"]

[package]
name = "tank-coding-battle"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }
bevy_asset_loader = { version = "0.22.0", features = [
    "standard_dynamic_assets",
] }
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
serde = "1"
serde_json = "1"
bevy-inspector-egui = { version = "0.29" }
bevy_flycam = "0.15"

server = { path = "server", default-features = false }
spectator_client = { path = "spectator_client", default-features = false }
shared = { path = "shared", default-features = false }
proc_macros = { path = "proc_macros" }

[dependencies]
bevy = { workspace = true }
server = { workspace = true, optional = true, default-features = false }
spectator_client = { workspace = true, optional = true, default-features = false }
rand = "0.9.0"

[features]
default = []
server = ["server/server"]
server_debug = ["server", "server/debug"]
spectator_client = ["spectator_client/spectator_client"]
spectator_client_debug = ["spectator_client", "spectator_client/debug"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable a lot of optimization in release mode
[profile.release]
codegen-units = 1
lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
