[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }

bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }

rand = "0.9.0"

[features]
default = ["server"]
server = [
    "bevy/bevy_state",
    "bevy/bevy_color",
    "bevy/serialize",
    "bevy/multi_threaded",
]
debug = ["bevy/default", "bevy-inspector-egui"]
