[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true, default-features = false }

bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }
bevy_flycam = { workspace = true, optional = true }

rand = "0.9.0"

[features]
default = ["server", "debug"]
server = [
    "bevy/bevy_state",
    "bevy/bevy_color",
    "bevy/serialize",
    "bevy/multi_threaded",
    "bevy/file_watcher",
    "shared/server",
]
debug = [
    "bevy/default",
    "bevy-inspector-egui",
    "shared/debug",
    "bevy_flycam",
    "bevy/bevy_dev_tools",
]
