[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
proc_macros = { workspace = true }

bevy = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_common_assets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["shared"]
shared = ["bevy/serialize"]
debug = []
