[package]
name = "spectator_client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }

bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy-inspector-egui = { version = "0.29" }

[features]
default = ["spectator_client"]
spectator_client = ["bevy/default"]
