[package]
name = "spectator_client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }

bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

bevy-inspector-egui = { version = "0.29" }
bevy_flycam = "0.15"
bevy_mod_billboard = { git = "https://github.com/voximity/bevy_mod_billboard.git", branch = "migrate-0.15" }

[features]
default = ["bevy/default", "bevy/serialize"]
